@@ -6,6 +6,10 @@ Type/class unification and new-style classes
 
 Core and builtins
 
+- Most builtin sequences now support "extended slices", i.e. slices
+  with a third "stride" parameter.  For example, "range(10)[1:6:2]"
+  evaluates to [1, 3, 5].
+
 - Cycles going through the __class__ link of a new-style instance are
   now detected by the garbage collector.
 
